[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Bunldes-RS Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/loadnetwork/bundles-rs"
repository = "https://github.com/loadnetwork/bundles-rs"
exclude = ["benches/", "tests/", "testdata/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
large-enum-variant = "allow"
result-large-err = "allow"

[workspace.dependencies]
ans104 = { version = "0.1.0", path = "crates/ans104", default-features = false }
