[workspace]
members = ["crates/*", "examples/*"]
resolver = "2"


[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.85"
authors = ["Load Network"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/loadnetwork/bundles-rs"
repository = "https://github.com/loadnetwork/bundles-rs"
exclude = ["benches/", "tests/", "testdata/"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"
large-enum-variant = "allow"
result-large-err = "allow"

[workspace.dependencies]
ans104 = { version = "0.1.0", path = "crates/ans104", default-features = false }
crypto = { version = "0.1.0", path = "crates/crypto", default-features = false }

anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.10.1"
futures = "0.3.31"
lazy_static = "1.5.0"
apache-avro = "0.19.0"
once_cell = "1.21.3"
sha2 = "0.10"
base64 = "0.22.1"


rand = { version = "0.8", features = [
  "std",
  "getrandom",
] }
rand_core = "0.6"
