[package]
name = "ans104"
version = "0.1.0"
edition = "2024"

[dependencies]

# verification & http
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
bytes = "1.10.1"
futures = "0.3.31"
lazy_static = "1.5.0"
apache-avro = "0.19.0"
once_cell = "1.21.3"
