[package]
name = "ans104"
version = "0.1.0"
edition = "2024"

[dependencies]

# verification & http
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true

serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
lazy_static.workspace = true
apache-avro.workspace = true
once_cell.workspace = true
