[package]
name = "ans104"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
crypto = { path = "../crypto" }

# verification & http
reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true

serde_json.workspace = true
bytes.workspace = true
futures.workspace = true
lazy_static.workspace = true
apache-avro.workspace = true
once_cell.workspace = true

sha2.workspace = true
rand.workspace = true
rand_core.workspace = true
base64.workspace = true
byteorder = "1.5.0"
