[package]
name = "bundler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
crypto = { path = "../crypto" }
ans104 = { path = "../ans104" }

reqwest.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }


[lints]
workspace = true
