[package]
name = "crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
ed25519-dalek = { version = "2.1.1", features = ["rand_core"]}

rand = { version = "0.8", default-features = false, features = ["std", "getrandom"] }
rand_core = "0.6"